# rive_native_win_patch

./: CHANGELOG.md  hash.txt  pubspec.yaml  version.txt
android/: CMakeLists.txt  build.gradle
android/src/main/kotlin/app/rive/rive_native/: RiveNativePlugin.kt
example/: pubspec.yaml
example/lib/examples/: data_binding_artboards.dart  out_of_band_assets.dart  text_runs.dart  text_runs_nested.dart
ios/: rive_native.podspec
ios/Classes/: rive_native_plugin.mm
lib/: rive_luau.dart  rive_native.dart  scripting_workspace.dart
lib/src/: rive.dart  rive_native_ffi.dart  rive_native_web.dart  rive_renderer.dart  rive_widget.dart  wasm_version.dart
lib/src/ffi/: dynamic_library_helper.dart  rive_ffi.dart  rive_luau_ffi.dart  rive_renderer_ffi.dart  rive_text_ffi.dart  scripting_workspace_ffi.dart
lib/src/utilities/binary_buffer/: binary_reader.dart
lib/src/web/: rive_luau_web.dart  rive_renderer_web.dart  rive_text_web.dart  rive_web.dart  scripting_workspace_web.dart
linux/: CMakeLists.txt  rive_native_plugin.cpp
macos/: rive_native.podspec
native/: build.sh  compile_commands.json
native/platform/android/: rive_native_android.cpp
native/platform/wasm/: webgl_factory.cpp
native/src/: renderer_binding.cpp  rive_binding.cpp  rive_luau_binding.cpp  text_binding.cpp
native/wasm/: package.json
test/: api_integrity_test.dart  data_binding_test.dart  out_of_band_assets_test.dart
test/goldens/src/: rive_golden.dart
windows/: rive_native_plugin.cpp
